# colour-text-to-colour

./: .flake8  .gitignore  model testing_params.pkl  model testing_with_word2vec.h5  model_testing_params_with_word2vec.pkl  model_testing_with_word2vec.h5  pyproject.toml  test_shreyan_params.pkl  word2vec_model.h5  word2vec_model.model
src/api/: main.py
src/api/dto/: request.py
src/api/routers/: model.py
src/common/: exceptions.py
src/controller/: main.py
src/inference/: practice.ipynb  test_performance.py
src/predict/: model_predict.py
src/service/: __init__.py  _training_data.py  brain.py
src/train_test_data/: test_colors.json
src/utils/: __init__.py  colour_convertor.py  sanity_check.py
